# NoctuaryEngine

./: .gitignore  2026-01-13-local-command-caveatcaveat-the-messages-below-w.txt  CMakeLists.txt  LICENSE  NoctuaryEngine  NoctuaryEngine.sln  NoctuaryEngine.vcxproj  NoctuaryEngine.vcxproj.filters  README.md  \  _debug_monke.blend  astral_app.cpp  astral_app.h  compile.bat  imgui.ini  main.cpp  xmake.lua
.zed/: debug.json
assets/meshes/: Cassandra_256.glb  bunny.mtl  bunny_low.glb  dewstalker.gltf  monke.mtl
assets/meshes/Cassandra/: Cassandra_256 copy.gltf  Cassandra_256.gltf
assets/meshes/MoonlitCafe/: MoonlitCafe.gltf
assets/meshes/_debugPlane/: debugPlane.gltf  debugPlane.mtl
shaders/: simple_shader.frag.spv  simple_shader.vert.spv
src/: astral_app.cpp  astral_app.h  astral_app.hpp  generic_render_system.cpp  generic_render_system.h  generic_render_system.hpp  main.cpp  nt_anim_system.cpp  nt_anim_system.hpp  nt_animation.cpp  nt_animation.hpp  nt_animator.cpp  nt_animator.hpp  nt_buffer.cpp  nt_buffer.hpp  nt_camera.cpp  nt_camera.h  nt_camera.hpp  nt_camera_system.cpp  nt_camera_system.hpp  nt_components.hpp  nt_debug.cpp  nt_debug.hpp  nt_debugline_system.cpp  nt_debugline_system.hpp  nt_descriptors.cpp  nt_descriptors.hpp  nt_device.cpp  nt_device.h  nt_device.hpp  nt_ecs.hpp  nt_frame_info.hpp  nt_game_object.cpp  nt_game_object.h  nt_game_object.hpp  nt_im3d_renderer.cpp  nt_im3d_renderer.hpp  nt_image.cpp  nt_image.hpp  nt_input.cpp  (+31 more)
src/imgui/backends/: imgui_impl_glfw.h  imgui_impl_vulkan.h
src/shaders/: billboard.frag  billboard.vert  color_shader.frag  debug_grid.frag  debug_grid.vert  debug_shadowmap.frag  debug_shadowmap.vert  depth_shader.frag  depth_shader.vert  im3d.frag  im3d.vert  line.vert  line_shader.vert  lit_shader.vert  normals_shader.vert  npr.frag  npr.vert  pbr.frag  pbr.vert  scroll_uv.frag  scroll_uv.vert  shadowmap.vert  simple_line_shader.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  texture_lit_shader.frag  texture_lit_shader_copy.frag  texture_shader.frag  texture_unlit_shader.frag  unlit_shader.vert
traces/: NEngineRDocSetting.cap  test_1.rdc
